<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".card.UnblockFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_horizontal"
            android:text="@string/unblock_pin"
            android:textColor="@color/text_primary"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup_pinType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <RadioButton
                android:id="@+id/radio_pin1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pin1_label"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radio_pin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/pin2_label" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/add_puk"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_PUK"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey_light"
            android:hint="@string/puk_hint"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/new_pin"
            android:textColor="@color/text_primary"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_newPIN"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="10dp"
            android:background="@color/grey_light"
            android:importantForAutofill="no"
            android:inputType="numberPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_next"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/black"
                android:text="@string/next"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
