<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.ContainerFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/linearLayout_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/container_name"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <EditText
                android:id="@+id/editText_containerName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center_horizontal"
                android:hint="@string/container_name"
                android:importantForAutofill="no"
                android:inputType="textNoSuggestions"
                android:textColor="@color/text_primary"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/container_files"
                android:textColor="@color/text_primary"
                android:textSize="14sp"
                android:textStyle="bold|italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_containerFiles"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginBottom="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_addFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/add_file"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/checkBox_extendSignature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:text="@string/extend_signature"
                android:textColor="@color/text_primary"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button_get_sign_cert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/get_signature"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button_shareContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif-light"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="20dp"
                android:backgroundTint="@color/black"
                android:text="@string/back"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</FrameLayout>